Markup - Table and price block on the Tour page.

--- a/markup/tours/tour/index.html
+++ b/markup/tours/tour/index.html
@@ -134,6 +134,50 @@
         </div>
       </div>
       <hr class="i-size-L">
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <caption>
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2">Название таблицы</div>
+            </div>
+          </caption>
+          <thead>
+            <tr>
+              <th>Заголовок столбца 1</th>
+              <th>Заголовок столбца 2</th>
+              <th>Заголовок столбца 3</th>
+              <th>Заголовок столбца 4</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Пункт 1</td>
+              <td>Пункт 2</td>
+              <td>Пункт 3</td>
+              <td>Пункт 4</td>
+            </tr>
+            <tr>
+              <td>Пункт 1</td>
+              <td>Пункт 2</td>
+              <td>Пункт 3</td>
+              <td>Пункт 4</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <hr class="i-size-M i-unstyled">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="row">
+            <div class="col-sm-6 text-large"><b>Цена: <span class="text-nowrap">98 740 руб.</span></b></div>
+            <hr class="i-size-S i-unstyled visible-xs-block">
+            <div class="col-sm-6">         <a href="" class="btn btn-large btn-wide">Отправить заявку</a></div>
+          </div>
+          <hr class="i-size-S i-unstyled visible-xs-block">
+          <p class="xsmall relative"><span class="asterisk">*</span>По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться. По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.</p>
+        </div>
+      </div>
+      <hr class="i-size-L">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div class="row">
