--- a/markup/forms/index.html
+++ b/markup/forms/index.html
@@ -102,6 +102,7 @@
         </div>
       </div>
       <!-- end /components/forms/-->
+      <hr class="i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
