--- a/markup/index.html
+++ b/markup/index.html
@@ -27,9 +27,16 @@
               <li><a href="/about/">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href="" class="b-phone-icon"><i></i></a></li>
+              <li><a href="#phone-modal" class="b-phone-icon modal-trigger"><i></i></a></li>
               <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
+            <div id="phone-modal" class="modal">
+              <div class="modal-content">
+                <h4>Modal Header</h4>
+                <p>A bunch of text</p>
+              </div>
+              <div class="modal-footer"><a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a></div>
+            </div>
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
               <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
@@ -191,7 +198,7 @@
               <p>Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.</p>
             </div>
           </div>
-          <hr>
+          <hr class="i-unstyled">
           <div class="row">
             <div class="col-sm-6 col-sm-push-6 center"><img src="/upload/about2.png" alt="" class="img-responsive"></div>
             <div class="col-sm-6 col-sm-pull-6">
@@ -199,9 +206,9 @@
               <p>Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.</p>
             </div>
           </div>
-          <hr>
+          <hr class="i-unstyled">
           <div class="row">
-            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
+            <div class="col-sm-6 center"><img src="/upload/about3.png" alt="" class="img-responsive"></div>
             <div class="col-sm-6">
               <h2>Надежный партнер</h2>
               <p>Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».</p>
