--- a/markup/request/sent/index.html
+++ b/markup/request/sent/index.html
@@ -27,9 +27,16 @@
               <li><a href="/about/">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href="" class="b-phone-icon"><i></i></a></li>
+              <li><a href="#phone-modal" class="b-phone-icon modal-trigger"><i></i></a></li>
               <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
+            <div id="phone-modal" class="modal">
+              <div class="modal-content">
+                <h4>Modal Header</h4>
+                <p>A bunch of text</p>
+              </div>
+              <div class="modal-footer"><a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a></div>
+            </div>
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
               <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
