--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -27,15 +27,19 @@
               <li><a href="/about/">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href="#phone-modal" class="b-phone-icon modal-trigger"><i></i></a></li>
+              <li><a href="#phoneModal" class="b-phone-icon modal-trigger"><i></i></a></li>
               <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
-            <div id="phone-modal" class="modal">
-              <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
+            <div id="phoneModal" class="modal"><a href="#!" class="modal-action modal-close"></a>
+              <div class="modal-content text-center">
+                <h2>Связаться с нами</h2>
+                <div class="modal-phones"><i class="b-phone-icon"></i>
+                  <div>8 800 80 90 100</div>
+                  <div>+7 495 350 00 00</div>
+                  <div>+7 495 350 00 00</div>
+                </div>
+                <div class="modal-post"><i class="b-post-icon"></i><a href="request">Написать нам</a></div>
               </div>
-              <div class="modal-footer"><a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a></div>
             </div>
             <ul id="slide-out" class="side-nav unstyled">
               <li data-activates="slide-out" class="side-nav-back"></li>
