--- a/markup/index.html
+++ b/markup/index.html
@@ -34,9 +34,9 @@
               <div class="modal-content text-center">
                 <h2>Связаться с нами</h2>
                 <div class="modal-phones"><i class="b-phone-icon"></i>
-                  <div>8 800 80 90 100</div>
-                  <div class="tel">+7 495 350 00 00</div>
-                  <div>+7 495 350 00 00</div>
+                  <div><a href="tel:+88008090100">8 800 80 90 100</a></div>
+                  <div><a href="tel:+74953500000">+7 495 350 00 00</a></div>
+                  <div><a href="tel:+74953500000">+7 495 350 00 00</a></div>
                 </div>
                 <div class="modal-post"><i class="b-post-icon"></i><a href="request">Написать нам</a></div>
               </div>
