--- a/markup/tours/tour/index.html
+++ b/markup/tours/tour/index.html
@@ -19,7 +19,7 @@
     <header class="b-header">
       <nav>
         <div class="container">
-          <div class="nav-wrapper"><a href="#" class="brand-logo left"><img src="/upload/travellers-logo.png" alt="Travellers"></a>
+          <div class="nav-wrapper"><a href="/" class="brand-logo left"><img src="/upload/travellers-logo.png" alt="Travellers"></a>
             <ul class="unstyled b-header-top-menu center hide-on-med-and-down">
               <li><span href="/tours/" class="i-disabled">Туры</span></li>
               <li><a href="/aviatickets/">Авиабилеты</a></li>
@@ -27,18 +27,18 @@
               <li><a href="/about/">О нас</a></li>
             </ul>
             <ul class="unstyled b-header-icons right">
-              <li><a href="#phoneModal" class="b-phone-icon modal-trigger"><i></i></a></li>
-              <li><a href="" data-activates="slide-out" class="b-header-nav b-menu-icon"><i></i></a></li>
+              <li><a href="#phoneModal" rel="nofollow" class="b-phone-icon modal-trigger"><i></i></a></li>
+              <li><a href="" data-activates="slide-out" rel="nofollow" class="b-header-nav b-menu-icon"><i></i></a></li>
             </ul>
-            <div id="phoneModal" class="modal"><a href="#!" class="modal-action modal-close"></a>
+            <div id="phoneModal" class="modal"><a href="#!" rel="nofollow" class="modal-action modal-close"></a>
               <div class="modal-content text-center">
                 <h2>Связаться с нами</h2>
                 <div class="modal-phones"><i class="b-phone-icon"></i>
-                  <div><a href="tel:+88008090100">8 800 80 90 100</a></div>
-                  <div><a href="tel:+74953500000">+7 495 350 00 00</a></div>
-                  <div><a href="tel:+74953500000">+7 495 350 00 00</a></div>
+                  <div><a href="tel:+88008090100" rel="nofollow">8 800 80 90 100</a></div>
+                  <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
+                  <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
                 </div>
-                <div class="modal-post"><i class="b-post-icon"></i><a href="request">Написать нам</a></div>
+                <div class="modal-post"><i class="b-post-icon"></i><a href="/request/">Написать нам</a></div>
               </div>
             </div>
             <ul id="slide-out" class="side-nav unstyled">
