--- a/markup/hotels/index.html
+++ b/markup/hotels/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/template/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -67,6 +67,12 @@
       <link rel="stylesheet" href="/components/forms/style.css">
       <script src="/components/forms/script.js"></script>
       <div class="b-forms">
+        <div class="row i-unstyled">
+          <div class="col-sm-8 col-sm-offset-2">
+            <hr class="i-unstyled">
+            <h2>Форма бронирования туров</h2>
+          </div>
+        </div>
         <div class="b-forms__tab hidden-xs">
           <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
         </div>
