--- a/markup/request/index.html
+++ b/markup/request/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/template/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -56,9 +56,13 @@
     </header>
     <section class="container">
       <hr class="i-unstyled">
-      <div class="row">
+      <div class="row i-unstyled">
         <div class="col-sm-8 col-sm-offset-2">
           <h1>Отправить запрос</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
           <p>Отправьте запрос на интересующий вас тур и мы предложим вам оптимальный вариант путешествия.</p>
         </div>
       </div>
