Bitrix composite button

--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -177,6 +177,7 @@
           <div class="col-xs-6 text-right"><a href="http://bejet.ru" target="_blank">Решение создано в Bejet.</a></div>
         </div>
       </section>
-    </footer>
+    </footer><div style="position: relative;"><a target="_blank" class="bx-composite-btn bx-btn-white bx-composite-btn-fixed" href="http://www.1c-bitrix.ru/composite/" style="background-color: rgb(233, 69, 36);">Быстро с 1С-Битрикс</a></div>
+    <style type="text/css">.bx-composite-btn {background: url(/bitrix/images/main/composite/sprite-1x.png) no-repeat right 0 #e94524;border-radius: 15px;color: #ffffff !important;display: inline-block;line-height: 30px;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;font-size: 12px !important;font-weight: bold !important;height: 31px !important;padding: 0 42px 0 17px !important;vertical-align: middle !important;text-decoration: none !important;}@mediaonly screen and (-webkit-min-device-pixel-ratio: 2),only screen and (min--moz-device-pixel-ratio: 2),only screen and (-o-min-device-pixel-ratio: 2/1),only screen and (min-device-pixel-ratio: 2),only screen and (min-resolution: 192dpi),only screen and (min-resolution: 2dppx) {.bx-composite-btn {background-image: url(/bitrix/images/main/composite/sprite-2x.png);background-size: 42px 124px;}}.bx-composite-btn-fixed {position: absolute;top: -45px;right: 15px;z-index: 10;}.bx-btn-white {background-position: right 0;color: #fff !important;}.bx-btn-black {background-position: right -31px;color: #000 !important;}.bx-btn-red {background-position: right -62px;color: #555 !important;}.bx-btn-grey {background-position: right -93px;color: #657b89 !important;}.bx-btn-border {border: 1px solid #d4d4d4;height: 29px !important;line-height: 29px !important;}</style>
   </body>
 </html>
