Gaps on the site

--- a/markup/about/index.html
+++ b/markup/about/index.html
@@ -142,7 +142,7 @@
           </ul>
         </div>
       </div>
-      <hr class="i-unstyled">
+      <hr class="i-size-M i-unstyled">
     </section>
     <footer class="b-footer">
       <section class="container">
