--- a/markup/index.html
+++ b/markup/index.html
@@ -229,7 +229,7 @@
           </div>
         </div>
       </div>
-      <hr class="i-size-L">
+      <hr class="i-size-L i-unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <h1>Travellers — универсальное туристкое агентство</h1>
