--- a/markup/tours/index.html
+++ b/markup/tours/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="/template/jscript.js"></script>
   </head>
-  <body>
+  <body><div id="bx-panel" style="z-index: 995 !important;">BX Panel</div>
     <header class="b-header">
       <nav>
         <div class="container">
@@ -62,30 +62,30 @@
           <p>Мы предлагаем вам забронировать туры по всему миру.</p>
         </div>
       </div>
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
+      <!-- start /components/tours.21/-->
+      <div class="b-tours-21 b-tours">
         <div class="row">
           <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
           <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a></div>
         </div>
       </div>
-      <!-- end /components/banner.21/-->
-      <!-- start /components/banner.12/-->
-      <div class="b-banner-12 b-banner">
+      <!-- end /components/tours.21/-->
+      <!-- start /components/tours.12/-->
+      <div class="b-tours-12 b-tours">
         <div class="row">
           <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a></div>
           <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
         </div>
       </div>
-      <!-- end /components/banner.12/-->
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
+      <!-- end /components/tours.12/-->
+      <!-- start /components/tours.21/-->
+      <div class="b-tours-21 b-tours">
         <div class="row">
           <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
           <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a></div>
         </div>
       </div>
-      <!-- end /components/banner.21/-->
+      <!-- end /components/tours.21/-->
       <hr class="i-unstyled">
       <div class="b-forms">
         <div class="hidden-xs">
@@ -101,7 +101,7 @@
               </nav>
             </div>
             <div id="form1" class="col-sm-12 b-forms__tab">
-              <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+              <div style="width: 100px; background-color: lightgreen;">form1</div>
             </div>
             <div id="form2" class="col-sm-12 b-forms__tab">
               <div style="width: 100px; background-color: lightgreen;">form2</div>
@@ -110,7 +110,7 @@
               <div style="width: 500px; background-color: violet;">form3</div>
             </div>
             <div id="form4" class="col-sm-12 b-forms__tab">
-              <div style="width: 300px; background-color: lightblue;">form4</div>
+              <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
             </div>
             <div id="form9" class="col-sm-12 b-forms__tab">
               <div style="width: 200px; background-color: pink;">form9</div>
@@ -164,10 +164,10 @@
                   <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
                   <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
-                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
-                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                 </div>
                 <div class="visible-xs-block">
