--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="/template/jscript.js"></script>
   </head>
-  <body>
+  <body><div id="bx-panel" style="z-index: 995 !important;">BX Panel</div>
     <header class="b-header">
       <nav>
         <div class="container">
