--- a/markup/index.html
+++ b/markup/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="/template/jscript.js"></script>
   </head>
-  <body>
+  <body><div id="bx-panel" style="z-index: 995 !important;">BX Panel</div>
     <header class="b-header">
       <nav>
         <div class="container">
@@ -56,80 +56,80 @@
     </header>
     <section class="container">
       <hr class="i-unstyled">
-      <!-- start /components/banner.21/-->
-      <div class="b-banner-21 b-banner">
+      <!-- start /components/announcement.21/-->
+      <div class="b-announcement-21 b-announcement">
         <div class="row">
-          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Старушка Европа</div>
-              <div class="b-banner__title">Увидеть Париж</div>
-              <div class="b-banner__type">Прогулки по летнему Парижу</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Старушка Европа</div>
+              <div class="b-announcement__title">Увидеть Париж</div>
+              <div class="b-announcement__type">Прогулки по летнему Парижу</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">76 900 руб.</span>
+                 <span class="b-announcement__price__num">76 900 руб.</span>
               </div></a></div>
-          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Сказка</div>
-              <div class="b-banner__title">Северное сияние в Исландии</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Сказка</div>
+              <div class="b-announcement__title">Северное сияние в Исландии</div>
+              <div class="b-announcement__type">Туры с авиаперелетом</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">466 800 руб.</span>
+                 <span class="b-announcement__price__num">466 800 руб.</span>
               </div></a></div>
         </div>
       </div>
-      <!-- end /components/banner.21/-->
-      <!-- start /components/banner.111/-->
-      <div class="b-banner-111 b-banner">
+      <!-- end /components/announcement.21/-->
+      <!-- start /components/announcement.111/-->
+      <div class="b-announcement-111 b-announcement">
         <div class="row">
-          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Южная америка</div>
-              <div class="b-banner__title">Гаваи, Коста Рика, Куба</div>
-              <div class="b-banner__type">Туры с авиаперелетом. Пляжный отдых</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Южная америка</div>
+              <div class="b-announcement__title">Гаваи, Коста Рика, Куба</div>
+              <div class="b-announcement__type">Туры с авиаперелетом. Пляжный отдых</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">266 800 руб.</span>
+                 <span class="b-announcement__price__num">266 800 руб.</span>
               </div></a></div>
-          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Горные лыжи</div>
-              <div class="b-banner__title">Австрия</div>
-              <div class="b-banner__type">Туры на европейские горнолыжные курорты.</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Горные лыжи</div>
+              <div class="b-announcement__title">Австрия</div>
+              <div class="b-announcement__type">Туры на европейские горнолыжные курорты.</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">106 800 руб.</span>
+                 <span class="b-announcement__price__num">106 800 руб.</span>
               </div></a></div>
-          <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Северная америка</div>
-              <div class="b-banner__title">Путешествие по Аризоне</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Северная америка</div>
+              <div class="b-announcement__title">Путешествие по Аризоне</div>
+              <div class="b-announcement__type">Туры с авиаперелетом</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">466 800 руб.</span>
+                 <span class="b-announcement__price__num">466 800 руб.</span>
               </div></a></div>
         </div>
       </div>
-      <!-- end /components/banner.111/-->
-      <!-- start /components/banner.12/-->
-      <div class="b-banner-12 b-banner">
+      <!-- end /components/announcement.111/-->
+      <!-- start /components/announcement.12/-->
+      <div class="b-announcement-12 b-announcement">
         <div class="row">
-          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Старушка Европа</div>
-              <div class="b-banner__title">Увидеть Париж</div>
-              <div class="b-banner__type">Прогулки по летнему Парижу</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Старушка Европа</div>
+              <div class="b-announcement__title">Увидеть Париж</div>
+              <div class="b-announcement__type">Прогулки по летнему Парижу</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">76 900 руб.</span>
+                 <span class="b-announcement__price__num">76 900 руб.</span>
               </div></a></div>
-          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-banner__text">
-              <div class="b-banner__section">Сказка</div>
-              <div class="b-banner__title">Северное сияние в Исландии</div>
-              <div class="b-banner__type">Туры с авиаперелетом</div>
-              <div class="b-banner__price">
+          <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-announcement__text">
+              <div class="b-announcement__section">Сказка</div>
+              <div class="b-announcement__title">Северное сияние в Исландии</div>
+              <div class="b-announcement__type">Туры с авиаперелетом</div>
+              <div class="b-announcement__price">
                 от
-                 <span class="b-banner__price__num">466 800 руб.</span>
+                 <span class="b-announcement__price__num">466 800 руб.</span>
               </div></a></div>
         </div>
       </div>
-      <!-- end /components/banner.12/-->
+      <!-- end /components/announcement.12/-->
       <hr class="i-unstyled">
       <div class="b-forms">
         <div class="hidden-xs">
@@ -145,7 +145,7 @@
               </nav>
             </div>
             <div id="form1" class="col-sm-12 b-forms__tab">
-              <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+              <div style="width: 100px; background-color: lightgreen;">form1</div>
             </div>
             <div id="form2" class="col-sm-12 b-forms__tab">
               <div style="width: 100px; background-color: lightgreen;">form2</div>
@@ -154,7 +154,7 @@
               <div style="width: 500px; background-color: violet;">form3</div>
             </div>
             <div id="form4" class="col-sm-12 b-forms__tab">
-              <div style="width: 300px; background-color: lightblue;">form4</div>
+              <div style="width: 700px; background-color: pink;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
             </div>
             <div id="form9" class="col-sm-12 b-forms__tab">
               <div style="width: 200px; background-color: pink;">form9</div>
@@ -208,10 +208,10 @@
                   <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
                   <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
-                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                   <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
-                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
                   <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
                 </div>
                 <div class="visible-xs-block">
