Announcement images and preloader rainbow

--- a/markup/countries/country/region/index.html
+++ b/markup/countries/country/region/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Main page | travellers</title>
+    <title>Country | travellers</title>
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -92,101 +92,13 @@
     <!-- end /components/gallery-banner/-->
     <section class="container">
       <hr class="i-unstyled i-size-L">
-      <div class="b-line-menu">
-        <div class="center"><a href="">Абхазия</a> <a href="">Австралия</a> <a href="">Австрия</a> <a href="">Австрия</a> <a href="">Азербайджан</a> <span>Аргентина</span> <a href="">Болгария</a> <a href="">Бразилия</a> <a href="">Венгрия</a> <a href="">Германия</a> <a href="">Израиль</a> <a href="">Индия</a> <a href="">Индонезия</a> <a href="">Италия</a> <a href="">Корея Южная</a> <a href="">Куба</a></div>
-        <hr class="i-line i-size-L">
-        <div class="center"><a href="">Все страны</a></div>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h1>Канкун</h1>
+          <p>Канкун — мечта офисного планктона из Штатов, примерно то же, что для наших Анталия или Хургада. Курорт с идеальными параметрами для того, чтобы стать достойной заставкой рабочего стола вашего лэптопа. И это действительно так: пляжи здесь белоснежные, вода бирюзовая, пальмы изумрудные, а девушки все без исключения загорелые и в бикини. Однако эта застывшая в Карибском море песчаная «семерка» (именно так выглядит из иллюминатора самолета загогулина Канкуна) готов предложить своим туристам нечто большее, чем банальное пляжное валяние. Шопоголиков ждут десятки первоклассных торговых центров, отцов семейств — рыбалка на барракуду и марлина, дайвинг у кораллов Косумеля, кайтинг и серфинг, ну а истинных леди — всевозможные процедуры в спа-центрах. Здесь умеют вывалять в грязи так, что будешь чувствовать себя княжной как минимум.</p>
+        </div>
       </div>
       <hr class="i-unstyled i-size-L">
-      <!-- start /components/announcement.21/-->
-      <div class="b-announcement-21 b-announcement">
-        <div class="row">
-          <div data-image="/upload/banner6.jpg" class="col-sm-8">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Старушка Европа</div>
-              <div class="b-announcement__title">Увидеть Париж</div>
-              <div class="b-announcement__type">Прогулки по летнему Парижу</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">76 900 руб.</span>
-              </div></a>
-          </div>
-          <div data-image="/upload/banner5.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Сказка</div>
-              <div class="b-announcement__title">Северное сияние в Исландии</div>
-              <div class="b-announcement__type">Туры с авиаперелетом</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">466 800 руб.</span>
-              </div></a>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/announcement.21/-->
-      <!-- start /components/announcement.111/-->
-      <div class="b-announcement-111 b-announcement">
-        <div class="row">
-          <div data-image="/upload/banner2.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Южная америка</div>
-              <div class="b-announcement__title">Гаваи, Коста Рика, Куба</div>
-              <div class="b-announcement__type">Туры с авиаперелетом. Пляжный отдых</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">266 800 руб.</span>
-              </div></a>
-          </div>
-          <div data-image="/upload/banner3.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Горные лыжи</div>
-              <div class="b-announcement__title">Австрия</div>
-              <div class="b-announcement__type">Туры на европейские горнолыжные курорты.</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">106 800 руб.</span>
-              </div></a>
-          </div>
-          <div data-image="/upload/banner4.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Северная америка</div>
-              <div class="b-announcement__title">Путешествие по Аризоне</div>
-              <div class="b-announcement__type">Туры с авиаперелетом</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">466 800 руб.</span>
-              </div></a>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/announcement.111/-->
-      <!-- start /components/announcement.12/-->
-      <div class="b-announcement-12 b-announcement">
-        <div class="row">
-          <div data-image="/upload/banner3.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Старушка Европа</div>
-              <div class="b-announcement__title">Увидеть Париж</div>
-              <div class="b-announcement__type">Прогулки по летнему Парижу</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">76 900 руб.</span>
-              </div></a>
-          </div>
-          <div data-image="/upload/banner2.jpg" class="col-sm-8">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
-              <div class="b-announcement__section">Сказка</div>
-              <div class="b-announcement__title">Северное сияние в Исландии</div>
-              <div class="b-announcement__type">Туры с авиаперелетом</div>
-              <div class="b-announcement__price">
-                от
-                 <span class="b-announcement__price__num">466 800 руб.</span>
-              </div></a>
-          </div>
-        </div>
-      </div>
-      <!-- end /components/announcement.12/-->
-      <hr class="i-unstyled">
       <div class="b-forms">
         <div class="hidden-xs">
           <div class="row">
@@ -285,40 +197,73 @@
           </div>
         </div>
       </div>
-      <hr class="i-size-L i-unstyled">
+      <hr class="i-unstyled i-size-L">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <h1>Travellers — универсальное туристкое агентство</h1>
-          <p>Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. </p>
-          <p>Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.</p>
-          <hr class="i-size-XL">
-          <div class="row">
-            <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6">
-              <h2>Широчайший выбор стран</h2>
-              <p>Пляжный отдых, экскурсионные программы, круизы, горные лыжи, авиабилеты и отели, посещение мероприятий, на нашем сайте вы сможете найти предложение более, чем по 30 странам мира.</p>
+          <h2>Курорты Канкуна</h2>
+          <p>Какие ассоциации возникают в голове при слове «Мексика»? Некий собирательный образ Рамиреса в сомбреро и с револьверами за поясом, наводящий страх на все окрестные села? Или эти самые, находящиеся в пустынях, желто-песчаные деревушки? Темноокие мексиканки или такос и буритос? Перечислять можно очень долго, но все это — стереотипы. Прежде всего, Мексика — безумно красивая и интересная страна, на территории которой сосредоточена масса достопримечательностей — как исторических, так и природных.</p>
+        </div>
+      </div>
+      <hr class="i-unstyled">
+      <div class="b-regions">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/1.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Канкун</span></a>
             </div>
           </div>
-          <hr class="i-unstyled">
-          <div class="row">
-            <div class="col-sm-6 col-sm-push-6 center"><img src="/upload/about2.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6 col-sm-pull-6">
-              <h2>Качественный сервис</h2>
-              <p>Наши сотрудники хорошо разбираются во всех направлениях предлагаемых нашим агентством помогают вам ответив на любой ваш вопрос в удобное для вас время.</p>
+          <hr class="i-unstyled i-size-S visible-xs-block">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/2.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Акапулько</span></a>
             </div>
           </div>
-          <hr class="i-unstyled">
-          <div class="row">
-            <div class="col-sm-6 center"><img src="/upload/about3.png" alt="" class="img-responsive"></div>
-            <div class="col-sm-6">
-              <h2>Надежный партнер</h2>
-              <p>Ответственность нашей компании застрахована в страховой компании «Страховка туристических компаний».</p>
-              <p>Мы гарантирцем, что заказаные у нас услуги будут предоставлены своевременно и качественно.</p>
+          <hr class="i-unstyled i-size-S visible-xs-block">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/2.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Италия</span></a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/1.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Мексика</span></a>
+            </div>
+          </div>
+          <hr class="i-unstyled i-size-S visible-xs-block">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/2.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Италия</span></a>
+            </div>
+          </div>
+          <hr class="i-unstyled i-size-S visible-xs-block">
+          <div class="col-sm-4">
+            <div class="b-regions__item"><img src="/template/images/square.gif" class="b-regions__square">
+              <div style="background-image: url(/upload/regions/2.jpg);" class="b-regions__image"></div><a href="resort/"><span class="b-regions__name">Италия</span></a>
             </div>
           </div>
         </div>
       </div>
-      <hr class="i-size-M i-unstyled">
+      <hr class="i-size-L">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="row">
+            <div class="col-sm-6"><img src="/upload/manager.jpg" class="img-responsive"></div>
+            <div class="col-sm-6">
+              <h3>Хотите забронировать этот тур?</h3>
+              <p>Меня завут Анна Иванова, я помогу вам приобрести этот тур и оформлю все необходимые документы.</p><a href="" class="btn btn-large btn-wide">Отправить заявку</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="i-size-L">
+      <div class="b-line-menu">
+        <div class="center"><a href="">Абхазия</a> <a href="">Австралия</a> <a href="">Австрия</a> <a href="">Австрия</a> <a href="">Азербайджан</a> <span>Аргентина</span> <a href="">Болгария</a> <a href="">Бразилия</a> <a href="">Венгрия</a> <a href="">Германия</a> <a href="">Израиль</a> <a href="">Индия</a> <a href="">Индонезия</a> <a href="">Италия</a> <a href="">Корея Южная</a> <a href="">Куба</a></div>
+        <hr class="i-line i-size-L">
+        <div class="center"><a href="">Все страны</a></div>
+      </div>
+      <hr class="i-unstyled i-size-L">
     </section>
     <footer class="b-footer">
       <section class="container">
